tests/fixtures/invalid/break_outside_loop.py
# break statement outside of loop
x: int = 10
break
print(x)
